# convWinograd

./: .gitignore  CMakeLists.txt  CREDITS.md  Makefile  README.md  conv_winograd_2x2_3x3_nchw_avx_fp32.c  conv_winograd_2x2_3x3_nchw_neon_fp32.c  conv_winograd_2x2_3x3_nchw_riscv_fp32.c  conv_winograd_2x2_3x3_nchw_sse_fp32.c  conv_winograd_2x2_3x3_neon_fp32.c  conv_winograd_2x2_3x3_riscv_fp32.c  conv_winograd_2x2_5x5_nchw_avx_fp32.c  conv_winograd_2x2_5x5_nchw_neon_fp32.c  conv_winograd_2x2_5x5_neon_fp32.c  conv_winograd_3x3_2x2_nchw_avx_fp32.c  conv_winograd_3x3_2x2_nchw_neon_fp32.c  conv_winograd_3x3_2x2_neon_fp32.c  conv_winograd_3x3_2x2_sse_fp32.c  conv_winograd_4x4_3x3_nchw_neon_fp32.c  conv_winograd_4x4_3x3_nchw_sse_fp32.c  conv_winograd_4x4_3x3_neon_fp32.c  conv_winograd_4x4_3x3_sse_fp32.c  conv_winograd_fp32.c  conv_winograd_nchw_fp32.c  gemm.h  libconvwinograd.c  neon_utils.h  test_winograd.c  test_winograd.sh
cmake/: FindAVX.cmake  README.md
src/: CMakeLists.txt  cblas_headers.h  dtypes.h  gemm.c  gemm.h
src/avx/: CMakeLists.txt  avx2_transpose.h  conv_winograd_2x2_3x3_avx512_fp32.c  conv_winograd_2x2_3x3_avx_fp32.c  conv_winograd_2x2_5x5_avx512_fp32.c  conv_winograd_2x2_5x5_avx_fp32.c  conv_winograd_4x4_3x3_avx512_fp32.c  conv_winograd_4x4_3x3_avx_fp32.c
src/common/: CMakeLists.txt  conv_winograd_2x2_3x3_native_fp32.c  conv_winograd_fp32.c  conv_winograd_workspace_alloc.c
src/neon/: CMakeLists.txt  conv_winograd_2x2_3x3_neon_fp32.c  conv_winograd_2x2_5x5_neon_fp32.c  conv_winograd_3x3_2x2_neon_fp32.c  conv_winograd_4x4_3x3_neon_fp32.c  neon_utils.h
src/riscv/: CMakeLists.txt  conv_winograd_2x2_3x3_riscv_fp32.c
src/sse/: CMakeLists.txt  conv_winograd_2x2_3x3_sse_fp32.c  conv_winograd_2x2_5x5_sse_fp32.c  conv_winograd_3x3_2x2_sse_fp32.c  conv_winograd_4x4_3x3_sse_fp32.c
tests/: CMakeLists.txt  sutils.c  test_winograd.c  test_winograd.sh
